--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "all-the-package-names": "^2.0.745",
-    "axios": "^1.3.6"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "vercel": "^28.20.0"
